--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -9,13 +9,13 @@ defaults: &defaults
     csv_guessing:     true
   debug_assets: true
   mandatory_keys:     [layer_opts, sql_api, varnish_management, redis, session_domain]
-  session_domain:     'cartodb.localhost'
+  session_domain:     'reallysimpleopendata.org'
   # If activated, urls will use usernames in format //SESSION_DOMAIN/user/USERNAME and ignore subdomains if present
   subdomainless_urls: true
   http_port:           # 3000 # nil|integer. HTTP port to use when building urls. Leave empty to use default (80)
   https_port:          # nil|integer. HTTPS port to use when building urls. Leave empty to use default (443)
   secret_token:       '71c2b25921b84a1cb21c71503ab8fb23'
-  account_host:       'cartodb.localhost:3000'
+  account_host:       'reallysimpleopendata.org:3000'
   account_path:       '/account'
   vizjson_cache_domains: ['.localhost']
   data_library:
@@ -28,29 +28,29 @@ defaults: &defaults
     filter: 'mapnik'
     internal:
       protocol:      'http'
-      domain:        'cartodb.localhost'
+      domain:        ''
       port:          '8181'
       host:          '127.0.0.1'
       verifycert:     false
     private:
-      protocol:      'http'
-      domain:        'cartodb.localhost'
-      port:          '80'
+      protocol:      'https'
+      domain:        'reallysimpleopendata.org'
+      port:          '443'
       verifycert:     false
     public:
-      protocol:      'http'
-      domain:        'cartodb.localhost'
-      port:          '80'
+      protocol:      'https'
+      domain:        'reallysimpleopendata.org'
+      port:          '443'
       verifycert:     false
   sql_api:
     private:
       protocol:   'http'
-      domain:     'cartodb.localhost'
+      domain:     'reallysimpleopendata.org'
       endpoint:   '/api/v2/sql'
       port:       80
     public:
       protocol:   'http'
-      domain:     'cartodb.localhost'
+      domain:     'reallysimpleopendata.org'
       endpoint:   '/api/v2/sql'
       port:       80
   api_requests_service_url: ''
