fix varnish issue

--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -9,13 +9,13 @@ defaults: &defaults
     csv_guessing:     true
   debug_assets: true
   mandatory_keys:     [layer_opts, sql_api, varnish_management, redis, session_domain]
-  session_domain:     'reallysimpleopendata.org'
+  session_domain:     'cartoprod.capitalplanning.nyc'
   # If activated, urls will use usernames in format //SESSION_DOMAIN/user/USERNAME and ignore subdomains if present
   subdomainless_urls: true
   http_port:           # 3000 # nil|integer. HTTP port to use when building urls. Leave empty to use default (80)
   https_port:          # nil|integer. HTTPS port to use when building urls. Leave empty to use default (443)
   secret_token:       '71c2b25921b84a1cb21c71503ab8fb23'
-  account_host:       'reallysimpleopendata.org:3000'
+  account_host:       'cartoprod.capitalplanning.nyc'
   account_path:       '/account'
   vizjson_cache_domains: ['.localhost']
   data_library:
@@ -34,25 +34,25 @@ defaults: &defaults
       verifycert:     false
     private:
       protocol:      'https'
-      domain:        'reallysimpleopendata.org'
+      domain:        'cartoprod.capitalplanning.nyc'
       port:          '443'
       verifycert:     false
     public:
       protocol:      'https'
-      domain:        'reallysimpleopendata.org'
+      domain:        'cartoprod.capitalplanning.nyc'
       port:          '443'
       verifycert:     false
   sql_api:
     private:
-      protocol:   'http'
-      domain:     'reallysimpleopendata.org'
+      protocol:   'https'
+      domain:     'cartoprod.capitalplanning.nyc'
       endpoint:   '/api/v2/sql'
-      port:       80
+      port:       443
     public:
-      protocol:   'http'
-      domain:     'reallysimpleopendata.org'
+      protocol:   'htts'
+      domain:     'cartoprod.capitalplanning.nyc'
       endpoint:   '/api/v2/sql'
-      port:       80
+      port:       443
   api_requests_service_url: ''
   developers_host:    'http://developers.cartodb.localhost:3000'
   google_analytics:
@@ -74,37 +74,6 @@ defaults: &defaults
   hubspot: ''
   segment:
     api_key:
-  metrics:
-    hubspot:
-      events_host: 'http://track.hubspot.com'
-      token: 'yourtoken'
-      form_ids:
-        newsletter: ''
-      event_ids:
-        import_failed: ''
-        geocoding_failed: ''
-        import_success: ''
-        geocoding_success: ''
-        published_visualization: ''
-        visited_dashboard: ''
-        connect_dataset: ''
-        create_map: ''
-        export_table: ''
-        export_map: ''
-        export_public_map: ''
-        select_wms: ''
-        color_basemap: ''
-        pattern_basemap: ''
-        geocoding: ''
-        visual_merge: ''
-        common_data: ''
-        cartocss_manually: ''
-        wizard: ''
-        filter: ''
-        query: ''
-      mailing_track:
-        like_map: ''
-        trending_map: ''
   common_data:
     protocol: 'https'
     username: 'common-data'
@@ -257,7 +226,7 @@ defaults: &defaults
       kind: "background"
       options: { color: '#ffffff' }
   cartodb_com_hosted: false
-  cartodb_central_domain_name: 'cartodb.localhost'
+  cartodb_central_domain_name: 'cartoprod.capitalplanning.nyc'
   aws:
     s3:
       access_key_id: "test"
@@ -280,7 +249,7 @@ defaults: &defaults
   # Use your Olark api id to enable it. If you remove this entry or don't define an app key, it won't be activated.
   olark:
     app_id: ''
-  enforce_non_empty_layer_css: true
+  enforce_non_empty_layer_css: false
   users_dumps:
     service:
       port: 00000
@@ -473,7 +442,7 @@ defaults: &defaults
         className: 'toner_stamen_labels'
         attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://www.openstreetmap.org/copyright">ODbL</a>.'
         labels:
-          url: 'http://{s}.tile.stamen.com/toner-labels/{z}/{x}/{y}.png'
+          url: 'https://{s}.tile.stamen.com/toner-labels/{z}/{x}/{y}.png'
       toner_stamen:
         url: 'https://stamen-tiles-{s}.a.ssl.fastly.net/toner/{z}/{x}/{y}.png'
         subdomains: 'abcd'
