--- a/config/cartodb.nginx.proxy.conf
+++ b/config/cartodb.nginx.proxy.conf
@@ -1,5 +1,18 @@
 server {
-  server_name cartodb.localhost *.cartodb.localhost;
+       listen         80;
+       server_name    yourdomain.com;
+       return         301 https://$server_name$request_uri;
+}
+
+server {
+
+  server_name yourdomain.com;
+
+  listen 443 ssl;
+
+  ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+
 
   client_max_body_size 100M;
 
