--- a/config/cartodb.nginx.proxy.conf
+++ b/config/cartodb.nginx.proxy.conf
@@ -39,6 +39,10 @@ server {
     proxy_set_header        X-Real-IP $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header        X-Forwarded-Proto $scheme;
+    
+    # Change default timeout for your long-running SQL api calls!
+    proxy_read_timeout 300s;
+    
     proxy_pass http://127.0.0.1:8080;
   }
 
