--- a/config/cartodb.nginx.proxy.conf
+++ b/config/cartodb.nginx.proxy.conf
@@ -8,6 +8,10 @@ server {
 
   server_name yourdomain.com;
 
+  # The max file size you think you will be uploading. 
+  client_max_body_size 1536M;
+  client_body_buffer_size 1536M;
+
   listen 443 ssl;
 
   ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
@@ -40,8 +44,8 @@ server {
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header        X-Forwarded-Proto $scheme;
     
-    # Change default timeout for your long-running SQL api calls!
-    proxy_read_timeout 300s;
+    # Change default timeout for your long-running api calls like SQL or Layer import
+    proxy_read_timeout 1800s;
     
     proxy_pass http://127.0.0.1:8080;
   }
